fix content shift

--- a/Client/src/styles/style.css
+++ b/Client/src/styles/style.css
@@ -20,6 +20,7 @@ Related Product */
   display: flex;
   justify-content: center;
   max-width: 70%;
+  min-height: 21vw;
   margin: auto;
 }
 
